[CREATE] create global styles and linked google fonts

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Karla:wght@300&family=Texturina:ital,wght@0,100;0,300;1,100&display=swap"
+    rel="stylesheet">
 
   <title>PLANET</title>
 </head>
