--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
-    href="https://fonts.googleapis.com/css2?family=Caveat&family=Raleway:wght@300&family=Karla:wght@300&family=Texturina:ital,wght@0,100;0,300;1,100&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Castoro&family=Caveat&family=Raleway:wght@300&family=Karla:wght@300&family=Texturina:ital,wght@0,100;0,300;1,100&display=swap"
     rel="stylesheet">
 
   <title>PLANET</title>
